# film

./: CMakeLists.txt  README.md  data.h  film.h  filmadalru.h  filmadastorage.h  main.cpp  pwlf.h  readme.txt  zipf.h
